# RGA

./: .gitignore  Cargo.toml  MIGRATION_MATRIX.md  QUICK_START.md  README.md  USER_GUIDE.md  start_gui.bat  start_gui.ps1
assets/: tools_schema.json  tools_schema_cn.json
src/: agent_loop.rs  assets.rs  config.rs  frontends.rs  gui.rs  html.rs  hub.rs  launcher.rs  lib.rs  llm.rs  main.rs  memory_utils.rs  scheduler.rs  session_log.rs  tools.rs
