[package]
name = "rga"
version = "0.1.0"
edition = "2024"
description = "Rust rewrite of the GenericAgent core runtime"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }

[dev-dependencies]
tempfile = "3"
